# sofia-mesh

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  JOSS_QUICK_START.md  JOSS_SUBMISSION_GUIDE.md  LICENSE  MOVING_MODULES.md  Makefile  PAPER_UPDATES.md  README.md  README_NEW.md  REORGANIZATION_COMPLETE.md  REORGANIZATION_PLAN.md  TOMS_PAPER_UPDATES.md  batch_benchmark_results.json  benchmark_boundary_loops.py  benchmark_grid_optimization.py  benchmark_incremental.py  benchmark_incremental_fair.py  benchmark_numba_comparison.py  benchmark_real_world.py  benchmark_refinement_hotpaths.py  benchmark_refinement_real_world.py  benchmark_refinement_subprocess.py  convert_su2_to_msh.py  greedy_cfg.json  paper.bib  paper.md  patch_cfg.json  phase2_results.json  pyproject.toml  pytest.ini  remesh_environment.py  remesh_trainer.py  reorganize.sh  requirements-dev.txt  requirements.txt  rl-ym.py  setup.cfg  (+1 more)
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
benchmarks/: README.md  benchmark_batch_ops.py  benchmark_boundary_loops.py  benchmark_comprehensive_validation.py  benchmark_editor_incremental.py  benchmark_grid_optimization.py  benchmark_incremental.py  benchmark_incremental_fair.py  benchmark_numba.py  benchmark_numba_comparison.py  benchmark_numba_direct.py  benchmark_optim2.py  benchmark_optim3.py  benchmark_phase2.py  benchmark_phase3.py  benchmark_real_world.py  benchmark_refinement_hotpaths.py  benchmark_refinement_real_world.py  benchmark_refinement_subprocess.py
configs/: README.md  coarsening_scenario.json  coarsening_scenario2_h2.json  coarsening_scenario_h2.json  coarsening_scenario_h4.json  generate_scenario_h_quad.json  greedy_config.json  letter_o_scenario.json  o_polygon.json  patch_config.json  refinement_scenario.json  refinement_scenario_h2.json  refinement_scenario_h2_quad.json  refinement_scenario_h2_smooth.json  s_polygon.json  sample_polygon_pentagon.json  sample_polygon_square.json  scenario_with_hole.json  u_polygon.json
demos/: README.md  __init__.py  adapt_before_after.py  adapt_scenario.py  anisotropic_adaptation_naca0012.py  boundary_split_demo.py  coarsening_scenario.py  coarsening_scenario2.py  (+16 more)
(+199 files in other folders)
