[metadata]
name = sofia-mesh
version = 0.1.0

[options]
package_dir =
    =.
packages = find:
include_package_data = True
install_requires =
    numpy
    matplotlib
    scipy
    imageio
python_requires = >=3.8

[options.packages.find]
where = .
include =
    sofia
    sofia.*
    demos
    demos.*

[options.entry_points]
console_scripts =
    sofia-remesh = sofia.sofia.remesh_driver:main

[flake8]
max-line-length = 120
ignore = E203,W503
